--- a/Instructions/Starter_Code.ipynb
+++ b/Instructions/Starter_Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "4              1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,47 +345,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "APPLICATION_TYPE\n",
-       "T3     27037\n",
-       "T4      1542\n",
-       "T6      1216\n",
-       "T5      1173\n",
-       "T19     1065\n",
-       "T8       737\n",
-       "T7       725\n",
-       "T10      528\n",
-       "T9       156\n",
-       "T13       66\n",
-       "T12       27\n",
-       "T2        16\n",
-       "T14        3\n",
-       "T25        3\n",
-       "T29        2\n",
-       "T15        2\n",
-       "T17        1\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Look at APPLICATION_TYPE value counts for binning\n",
     "#  YOUR CODE GOES HERE\n",
-    "application_df.value_counts('APPLICATION_TYPE')"
+    "application_counts = application_df.value_counts('APPLICATION_TYPE')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -398,15 +369,15 @@
        "C3000     1918\n",
        "C2100     1883\n",
        "         ...  \n",
-       "C1820        1\n",
-       "C1732        1\n",
-       "C1728        1\n",
-       "C1580        1\n",
-       "C1900        1\n",
+       "C2190        1\n",
+       "C2380        1\n",
+       "C2500        1\n",
+       "C2561        1\n",
+       "C8210        1\n",
        "Length: 71, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,28 +388,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "ASK_AMT\n",
-       "5000      25398\n",
-       "10478         3\n",
-       "15583         3\n",
-       "6725          3\n",
-       "63981         3\n",
-       "          ...  \n",
-       "281275        1\n",
-       "281288        1\n",
-       "281714        1\n",
-       "281725        1\n",
-       "107965        1\n",
+       "5000          25398\n",
+       "63981             3\n",
+       "10478             3\n",
+       "15583             3\n",
+       "6725              3\n",
+       "              ...  \n",
+       "53268             1\n",
+       "53251             1\n",
+       "53248             1\n",
+       "53241             1\n",
+       "8597806340        1\n",
        "Length: 8747, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,26 +420,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'application_types_to_replace' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-22dfae5b169b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Replace in dataframe\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mapp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mapplication_types_to_replace\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mapplication_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'APPLICATION_TYPE'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapplication_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'APPLICATION_TYPE'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mapp\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Other\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'application_types_to_replace' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "T3       27037\n",
+       "T4        1542\n",
+       "T6        1216\n",
+       "T5        1173\n",
+       "T19       1065\n",
+       "T8         737\n",
+       "T7         725\n",
+       "T10        528\n",
+       "Other      276\n",
+       "Name: APPLICATION_TYPE, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
     "#  YOUR CODE GOES HERE\n",
-    "application_types_to_replace = []\n",
+    "application_types_to_replace = list(application_counts[application_counts < 500].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
@@ -480,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -492,27 +471,29 @@
        "C3000     1918\n",
        "C2100     1883\n",
        "         ...  \n",
-       "C1370        1\n",
-       "C4120        1\n",
-       "C2600        1\n",
-       "C2190        1\n",
-       "C6100        1\n",
+       "C2570        1\n",
+       "C1236        1\n",
+       "C4500        1\n",
+       "C1248        1\n",
+       "C2170        1\n",
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Look at CLASSIFICATION value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "class_counts = application_df.CLASSIFICATION.value_counts()\n",
+    "class_counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -535,50 +516,98 @@
        "C1280       50\n",
        "C1230       36\n",
        "C1400       34\n",
-       "C7200       32\n",
        "C2300       32\n",
+       "C7200       32\n",
        "C1240       30\n",
        "C8000       20\n",
        "C7120       18\n",
        "C1500       16\n",
-       "C1800       15\n",
        "C6000       15\n",
+       "C1800       15\n",
        "C1250       14\n",
        "C8200       11\n",
-       "C1278       10\n",
        "C1238       10\n",
-       "C1237        9\n",
+       "C1278       10\n",
        "C1235        9\n",
+       "C1237        9\n",
        "C7210        7\n",
-       "C1720        6\n",
-       "C2400        6\n",
        "C4100        6\n",
+       "C2400        6\n",
+       "C1720        6\n",
        "C1257        5\n",
        "C1600        5\n",
-       "C0           3\n",
        "C1260        3\n",
+       "C0           3\n",
        "C2710        3\n",
        "C1234        2\n",
        "C1246        2\n",
-       "C1267        2\n",
-       "C3200        2\n",
        "C1256        2\n",
+       "C3200        2\n",
+       "C1267        2\n",
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "class_counts[class_counts > 1] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C1000    17326\n",
+       "C2000     6074\n",
+       "C1200     4837\n",
+       "C3000     1918\n",
+       "C2100     1883\n",
+       "C7000      777\n",
+       "C1700      287\n",
+       "C4000      194\n",
+       "C5000      116\n",
+       "C1270      114\n",
+       "C2700      104\n",
+       "C2800       95\n",
+       "C7100       75\n",
+       "C1300       58\n",
+       "C1280       50\n",
+       "C1230       36\n",
+       "C1400       34\n",
+       "C2300       32\n",
+       "C7200       32\n",
+       "C1240       30\n",
+       "C8000       20\n",
+       "C7120       18\n",
+       "C1500       16\n",
+       "C6000       15\n",
+       "C1800       15\n",
+       "C1250       14\n",
+       "C8200       11\n",
+       "Name: CLASSIFICATION, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " class_counts[class_counts > 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +622,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,6 +631,7 @@
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
     "#  YOUR CODE GOES HERE\n",
+    "classifications_to_replace = list(class_counts[class_counts < 1000].index) \n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
@@ -613,25 +643,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert categorical data to numeric with `pd.get_dummies`\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "application_with_dummies_df = pd.get_dummies(application_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
     "#  YOUR CODE GOES HERE\n",
+    "X = application_with_dummies_df.drop([\"IS_SUCCESSFUL\"], axis='columns').values\n",
+    "y = application_with_dummies_df[\"IS_SUCCESSFUL\"].values\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "#  YOUR CODE GOES HERE\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=78)"
    ]
   },
   {
@@ -990,7 +1024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
